<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_recorded_preview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.preview.RecordedPreviewFragment">

    <androidx.media3.ui.PlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:resize_mode="fit"
        app:surface_type="surface_view"
        app:show_next_button="false"
        app:show_previous_button="false"/>

    <LinearLayout
        android:id="@+id/button_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:contentDescription="@string/delete"
            android:background="@color/black"
            android:src="@drawable/ic_delete" />

        <ImageButton
            android:id="@+id/btn_done"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:contentDescription="@string/done"
            android:background="@color/black"
            android:src="@drawable/ic_check"/>

        <ImageButton
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_weight="1"
            android:contentDescription="@string/share"
            android:background="@color/black"
            android:src="@drawable/ic_share"/>
    </LinearLayout>
</LinearLayout>