<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_effect_picker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.effectpicker.EffectPickerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_picker_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/btn_picker_back"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:background="@null"
            android:contentDescription="@string/back"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_picker_confirm"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:background="@null"
            android:contentDescription="@string/done"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_picker_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/effect_picker_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_picker_divider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/horizontal_divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="92:8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_picker_title"
            app:layout_constraintWidth_percent="0.35" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- lưới 2 cột giống màn danh sách (cùng GridSpacingItemDecoration). paddingBottom 16dp + inset thanh
         điều hướng hệ thống (cộng trong Fragment) để hàng cuối cuộn lên được, không bị che. -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_effect_picker"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="16dp" />
</LinearLayout>
